fixed z-index dropdown bug

--- a/src/client/styles/partials/_header.scss
+++ b/src/client/styles/partials/_header.scss
@@ -72,6 +72,7 @@
 
 	.dropdown-menu-custom {
 		position: absolute;
+		z-index: 1;
 		right: 0px;
 		top: 70px;
 		width: 100%;    
